--- a/y/ya/yah/yahoomail.com.html
+++ b/y/ya/yah/yahoomail.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yahoomail.com privacy policy that was archived on 2009-02-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090227025105id_/http%3A//privacy.yahoo.com) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yahoomail.com privacy policy that was archived on 2009-10-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091001173114id_/http%3A//privacy.yahoo.com) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<title>Yahoo! Privacy Policy</title>
@@ -15,16 +15,10 @@
 	<body>
 		<div id="container">
 
-<!-- spaceId: 1350250319 -->   <div id="masthead">
-		<div id="header">
-			<strong class="logo"><a href="/privacy/us/yahoo/" title="Yahoo! Privacy Home">Yahoo! Privacy</a></strong>
-			<div id="utility">
-				<ul>
-					<li><a href="http://www.yahoo.com">Yahoo! Home</a>  -  <a href="http://help.yahoo.com/l/us/yahoo/privacy/index.html" title="Help">Help</a></li>
-				</ul>			
-			</div>
-		</div>				
-	</div>
+<!-- spaceId: 967400883 -->      <style type="text/css">
+      .yzq_x { position:absolute; }
+      </style><!-- SpaceID=0 robot -->
+
 			<!-- Begin Top Nav -->
          <div id="nav">
             <ul class="menu">
@@ -101,22 +95,6 @@
                <p>Yahoo! does not contact children under age 13 about special offers or for marketing purposes without a parent's permission. </p>
                <p>Yahoo! does not ask a child under age 13 for more personal information, as a condition of participation, than is reasonably necessary to participate in a given activity or promotion.</p>
 
-               <h3>INFORMATION SHARING AND DISCLOSURE</h3>
-
-               <p>Yahoo! does not rent, sell, or share personal information about you with other people or non-affiliated companies except to provide products or services you've requested, when we have your permission, or under the following circumstances:</p>
-                  <ul class="bb-list">
-                  <li>We provide the information to trusted partners who work on behalf of or with Yahoo! under confidentiality agreements. These companies may use your personal information to help Yahoo! communicate with you about offers from Yahoo! and our marketing partners. However, these companies do not have any independent right to share this information. </li>
-                  <li>We have a parent's permission to share the information if the user is a child under age 13. Parents have the option of allowing Yahoo! to collect and use their child's information without consenting to Yahoo! sharing of this information with people and companies who may use this information for their own purposes.</li>
-<li>We respond to subpoenas, court orders, or legal process, or to establish or exercise our legal rights or defend against legal claims.</li>
-                  <li>We believe it is necessary to share information in order to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of Yahoo!'s terms of use, or as otherwise required by law. </li>
-                  <li>We transfer information about you if Yahoo! is acquired by or merged with another company. In this event, Yahoo! will notify you before information about you is transferred and becomes subject to a different privacy policy. </li>
-                  </ul>
-               <p>Yahoo! displays targeted advertisements based on personal information. Advertisers (including ad serving companies) may assume that people who interact with, view, or click targeted ads meet the targeting criteria—for example, women ages 18-24 from a particular geographic area. </p>
-                  <ul class="bb-list">
-                  <li>Yahoo! does not provide any personal information to the advertiser when you interact with or view a targeted ad. However, by interacting with or viewing an ad you are consenting to the possibility that the advertiser will make the assumption that you meet the targeting criteria used to display the ad. </li>
-                  <li>Yahoo! advertisers include financial service providers (such as banks, insurance agents, stock brokers and mortgage lenders) and non-financial companies (such as stores, airlines, and software companies). </li>
-                  </ul>
-               <p>Yahoo! works with vendors, partners, advertisers, and other service providers in different industries and categories of business. For more information regarding providers of products or services that you've requested please read our detailed <a href="http://info.yahoo.com/privacy/us/all/" class="bb-url">reference links</a>. </p>
 	<p style="font-weight:bold"><a href="#_top">Return to Top</a></p>
 	<p>&nbsp;</p>
 	<a name="3"></a>
@@ -180,31 +158,32 @@
 	<div class="box">
 	<div class="segment">
 		<div class="featuretxt">
-<p><a href="http://info.yahoo.com/relevantads/" class="bb-url">Relevant Advertising</a>
+<p><span style="font-weight:bold"><a href="http://info.yahoo.com/privacy/us/yahoo/opt_out/targeting/details.html" class="bb-url">OPT-OUT</a></span>
                      <br>
-                     By bringing content and advertising to you that is relevant and tailored to your interests, Yahoo! provides a more compelling online experience. Our customized "smart" services save you time and cut through the clutter. <a href="http://info.yahoo.com/relevantads/" class="bb-url">Learn More about relevant advertising</a>.</p>
+                     </p><p>Prefer not to receive advertising based on your interests? Learn about your ability to <a href="http://info.yahoo.com/privacy/us/yahoo/opt_out/targeting/details.html" class="bb-url">opt out of interest-matched advertising</a> served by Yahoo!. </p>
 		</div><!-- class="featuretxt" -->
 	</div><!-- class="segment" -->
 	<div class="segment">
 		<div class="hdr">
-			Rumor Alert
+			RELEVANT ADVERTISING
 		</div><!-- class="hdr" -->
 		<div class="txt">
-			An email circulating since 2000 provides inaccurate information about Yahoo!'s use of web beacons in Yahoo! Groups email messages. We’d like to clarify this once and for all. <a href="http://help.yahoo.com/l/us/yahoo/groups/original/members/privacy/privacy-16.html" class="bb-url">Read more about how Yahoo! Groups uses web beacons</a>.
+			<p><span style="font-size:small">By bringing content and advertising to you that is relevant and tailored to your interests, Yahoo! provides a more compelling online experience. Our customized "smart" services save you time and cut through the clutter. <a href="http://info.yahoo.com/relevantads/" class="bb-url">Learn More about relevant advertising</a>. </span></p>
 		</div><!-- class="txt" -->
 	</div><!-- class="segment" -->	<div class="segment">
 		<div class="hdr">
-			Latest News
+			LATEST NEWS
 		</div><!-- class="hdr" -->
 		<div class="txt">
-			We have compiled some handy news sources for you to look at <a href="http://info.yahoo.com/privacy/us/yahoo/privacynews/" class="bb-url">privacy in the news</a>.
-		</div><!-- class="txt" -->
-	</div><!-- class="segment" -->	<div class="segment">
-		<div class="hdr">
-			Opt-out
-		</div><!-- class="hdr" -->
-		<div class="txt">
-			Prefer not to receive advertising based on your interests? Learn about your ability to <a href="http://info.yahoo.com/privacy/us/yahoo/opt_out/targeting/details.html" class="bb-url">opt-out of interest-matched advertising</a> served by Yahoo!.
+			<p><span style="font-weight:bold"><span style="font-size:small">Y! Introduces our new <a href=" http://www.ypolicyblog.com/" class="bb-url">Policy Blog!</a> </span></span></p>
+                     <br>
+<p><span style="font-size:small">More Yahoo! privacy news: </span></p>
+   <br>
+<p><span style="font-size:small">3/04 - <a href="http://info.yahoo.com/privacy/us/yahoo/privacynews/" class="bb-url">Yahoo! improves opt-out for interest-based customized advertising. Signed-in users can choose persistent opt-out, even when users clear browser cookies.</a> </span></p>
+                     <br>
+<p><span style="font-size:small">2/24 - <a href="http://info.yahoo.com/privacy/us/yahoo/privacynews/" class="bb-url">Yahoo! announces new customized advertising products that will better match ads to your interests.</a> </span></p>
+                     <br>
+                     <p><span style="font-size:small">12/17 - <a href="http://info.yahoo.com/privacy/us/yahoo/privacynews/" class="bb-url">Yahoo! announces industry leading approach to data retention.</a> </span></p>
 		</div><!-- class="txt" -->
 	</div><!-- class="segment" -->	</div><!-- class="box" -->
 					</div><!-- class="col2" -->
@@ -223,5 +202,6 @@ Copyright © <!-- -->2009<!-- --> Yahoo! Inc. All Rights Reserved.<br><br>
 		</div><!-- id="container" -->
 	
 
-<!-- w1.help.re1.yahoo.com uncompressed Thu Feb 26 18:51:04 PST 2009 -->
+
+<!-- w2.help.re1.yahoo.com uncompressed Thu Oct  1 10:31:14 PDT 2009 -->
 </body></html>
