--- a/b/ba/bac/backflip.com.html
+++ b/b/ba/bac/backflip.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the backflip.com privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622132816id_/http%3A//backflip.com/help/gh_privacy_out.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the backflip.com privacy policy that was archived on 2009-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091002081817id_/http%3A//www.backflip.com/help/gh_privacy_out.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Backflip | Privacy Policy</title>
