--- a/n/ne/new/newpaltz.edu.html
+++ b/n/ne/new/newpaltz.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newpaltz.edu privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618091908id_/http%3A//www.newpaltz.edu/internetprivacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newpaltz.edu privacy policy that was archived on 2009-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091002220316id_/http%3A//www.newpaltz.edu/internetprivacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Welcome to the State University of New York at New Paltz: Internet Privacy Policy</title>
@@ -20,14 +20,16 @@
 	<form method="get" action="http://google.newpaltz.edu/search">
 <p><input type="text" name="q" size="11" maxlength="255" class="search" value=""><input type="hidden" name="site" value="www"><input type="hidden" name="client" value="www"><input type="hidden" name="proxystylesheet" value="www"><input type="hidden" name="output" value="xml_no_dtd">&nbsp;<input type="submit" name="btnG" class="submit" value="google search"></p>
 </form>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+
 <script type="text/javascript">
-_uacct = "UA-614474-1";
-_userv=2;
-_udn="newpaltz.edu";
-urchinTracker();
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-614474-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
   </div>
 </div>
