--- a/b/ba/bal/ballerarcade.com.html
+++ b/b/ba/bal/ballerarcade.com.html
@@ -1,19 +1,16 @@
-<!--The following is the downloaded HTML source of the ballerarcade.com privacy policy that was archived on 2009-04-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090417223412id_/http%3A//www.ballerarcade.com/index.php%3Fpageid%3D3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ballerarcade.com privacy policy that was archived on 2009-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091002231237id_/http%3A//www.ballerarcade.com/index.php%3Fpageid%3D3) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
-<meta name="description" content="Racing Games, Car Games and Bike Games. BallerArcade has Bike Racing Games, Car Racing Games, Shooting Games, Action Games, Sports Games and Much More!...">
+<meta name="description" content="">
+<meta name="keywords" content=""> 
 
-<meta name="keywords" content="racing,games,car,bike"> 
-
-
-
-<title>RACING GAMES | CAR GAMES | BIKE GAMES - BallerArcade.com</title>
+<title>Privacy Policy // BallerArcade.com</title>
 
 <link rel="StyleSheet" href="http://www.ballerarcade.com/templates/style.css" type="text/css" media="screen">
 
-
+<meta name="verify-v1" content="b/9lDHRdbXVqTuOS/XNi0Jn+5fcWXedhLXDCaPDisd8=">
 
 <script src="http://www.ballerarcade.com/templates/arcade.js" type="text/javascript"></script>
 
@@ -40,11 +37,30 @@
     </script>
 
 
-</head>
+<script language="javascript">
+       function reloadFrames(first, refresh)
+       {
+               delay = 2; //minutes to delay the refresh
+               max_refreshes = 6;
 
+               if (max_refreshes > refresh)
+               {
+                       refreshed = refresh + 1;
+                       setTimeout("reloadFrames(false, refreshed)", delay*60*1000);
 
+                       if (!first)
+                       {
+                               ads = document.getElementsByName("ad");
 
-<body topmargin="0" onload="initLightbox();">
+                               for(var i=0; i<ads.length; i++)
+                               {
+                                       ads[i].src = ads[i].src;
+                               }
+                       }
+               }
+       }
+</script></head>
+<body onload="reloadFrames(true, 0);">
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 
@@ -63,7 +79,6 @@ if (top.location != location) {
 }  
 
 </script>
-
 <center><font size="1" color="#CCCCCC">
 
 <a target="_top" href="http://www.ballerarcade.com">
@@ -118,7 +133,7 @@ Bike Racing Games, Car Racing Games, Shooting Games, Action Games, Sports Games 
 			respects that your information is yours, and is committed to 
 			safeguarding your privacy when you’re using our web site. The 
 			following describes our collection of and use of any information 
-			that we may collect from you.</span></font></p>
+			that we may collect from you.</span></font></p><p><font color="#FFFFFF">We allow third-party companies to serve ads and/or collect certain anonymous information when you visit our web site. These companies may use non-personally identifiable information (e.g., click stream information, browser type, time and date, subject of advertisements clicked or scrolled over) during your visits to this and other Web sites in order to provide advertisements about goods and services likely to be of greater interest to you. These companies typically use a cookie or third party web beacon to collect this information. To learn more about this behavioral advertising practice or to opt-out of this type of advertising, you can visit networkadvertising.org.</font></p>
 			<p class="MsoNormal"><font color="#FFFFFF"><span style="font-size:11.0pt"> </span></font></p>
 			<p class="MsoNormal"><font color="#FFFFFF"><b><span style="font-size:11.0pt">Questions</span></b></font></p>
 			<p class="MsoNormal"><font color="#FFFFFF"><span style="font-size:11.0pt">If you have any 
@@ -174,7 +189,7 @@ Bike Racing Games, Car Racing Games, Shooting Games, Action Games, Sports Games 
 			</span></td>
 		</tr>
 	</tbody></table>
-</div>        
+</div>            
 
 
     <!-- END CONTENT PAGE -->		
@@ -210,6 +225,11 @@ Bike Racing Games, Car Racing Games, Shooting Games, Action Games, Sports Games 
 <table align="center" width="95%"><tbody><tr><td>
 
 <center>
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=40461&amp;m=1&amp;tp=5&amp;d=j&amp;t=s"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=40461&m=1&c=1" target="_top">
+<img src="http://media.fastclick.net/w/get.media?sid=40461&m=1&tp=5&d=s&c=1"
+width=728 height=90 border=1></a></noscript>
+<br>
 
 <font size="1" color="#FFFFFF" face="Arial"><a target="_blank" href="http://www.ballerarcade.com"><font size="1" color="#FFFFFF">
 
@@ -239,7 +259,7 @@ Flash Games</font></a></font> | <font size="1" color="#FFFFFF">
 
 <a target="_blank" href="http://www.arcadelots.com/">
 
-<font size="1" color="#FFFFFF">Free Games</font></a></font> <br> <font size="1" color="#FFFFFF">
+<font size="1" color="#FFFFFF">Car Games</font></a></font> <br> <font size="1" color="#FFFFFF">
 
 <a target="_blank" href="http://www.gamesahara.com/">
 
@@ -260,6 +280,10 @@ Flash Games</font></a></font> | <font size="1" color="#FFFFFF">
 <a target="_blank" href="http://www.rainbowdressup.com/">
 
 <font size="1" color="#FFFFFF">Dress Up Games</font></a></font> | <font size="1" color="#FFFFFF">
+
+<a target="_blank" href="http://www.playhub.com/">
+
+<font size="1" color="#FFFFFF">Free Games</font></a></font> | <font size="1" color="#FFFFFF">
 
 <a target="_blank" href="http://www.onlyfungames.com/">
 
