--- a/v/vi/vid/videowebtown.com.html
+++ b/v/vi/vid/videowebtown.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the videowebtown.com privacy policy that was archived on 2007-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071225072935id_/http%3A//www.videowebtown.com/community/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the videowebtown.com privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003003840id_/http%3A//www.videowebtown.com/community/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy</title>
+<meta name="verify-v1" content="0T3u+WQxkH7mmp2ixg4yJtlwPQQJ+gX+5J9W5sc2pko=">
 <meta name="Description" content="VideoWebTown is a total solution for video conversion which supports reading, playing lots of video and audio formats and converting them to popular Flash FLV, iPod, Sony PSP video formats to download. VideoWebTown can convert video files with very fast speed and ready to stream. Upload videos to your Website and share with your friends with free hosting. You can watch your videos in Flash, regardless of player format or codec.">
-<meta name="Abstract" content="VideoWebTown,Free Video,PSP,iPod,Xbox,Apple,Sony,FLV,AVI,Mpeg,MP4,Flash,iTunes,podcast,Videora,Video Convertor,Video Hosting,Video Codec, free video Website,multimedia,videos,movies,games,funny,clips,funny clips,humor,funny video,entertainments,cartoon videos,comedy videos,comedy,comedy videos,comedy shows,television,shows,tv,tv shows,music videos,movies,humor,humor videos,scific videos,reality shows,reality videos,webcam,webcam videos,real amateur,amateurs,girl,girls,girlfriend,girlfriend videos,reality porn,webcam porn,sex,fetish,fetish videos,niche girls,fetish girls,hot girls,celebrities,celebrities videos,download videos,upload videos">
-<meta name="Keyphrases" content="VideoWebTown,Free Video,PSP,iPod,Xbox,Apple,Sony,FLV,AVI,Mpeg,MP4,Flash,iTunes,podcast,Videora ,Video Convertor,Video Hosting,Video Codec,free video Website,multimedia,videos,movies,games,funny,flash,clips,funny clips,humor,funny video,entertainments,cartoon videos,comedy videos,comedy,comedy videos,comedy shows,television,shows,tv,tv shows,music videos,movies,humor,humor videos,scific videos,reality shows,reality videos,webcam,webcam videos,real amateur,amateurs,girl,girls,girlfriend,girlfriend videos,reality porn,webcam porn,sex,fetish,fetish videos,niche girls,fetish girls,hot girls,celebrities,celebrities videos,download videos,upload videos">
+<meta name="Abstract" content="VideoWebTown,Free Video,PSP,iPod,Xbox,Apple,Sony,FLV,AVI,Mpeg,MP4,Flash,iTunes,podcast,Videora,Video Convertor,Video Hosting,Video Codec, free video Website,multimedia,videos,movies,games,funny,clips,funny clips,humor,funny video,entertainments,cartoon videos,comedy videos,comedy,comedy videos,comedy shows,television,shows,tv,tv shows,music videos,movies,humor,humor videos,scific videos,reality shows,reality videos,webcam,webcam videos,real amateur,amateurs,girl,girls,girlfriend,girlfriend videos,sex,fetish,fetish videos,niche girls,fetish girls,hot girls,celebrities,celebrities videos,download videos,upload videos">
+<meta name="Keyphrases" content="VideoWebTown,Free Video,PSP,iPod,Xbox,Apple,Sony,FLV,AVI,Mpeg,MP4,Flash,iTunes,podcast,Videora ,Video Convertor,Video Hosting,Video Codec,free video Website,multimedia,videos,movies,games,funny,flash,clips,funny clips,humor,funny video,entertainments,cartoon videos,comedy videos,comedy,comedy videos,comedy shows,television,shows,tv,tv shows,music videos,movies,humor,humor videos,scific videos,reality shows,reality videos,webcam,webcam videos,real amateur,amateurs,girl,girls,girlfriend,girlfriend videos,sex,fetish,fetish videos,niche girls,fetish girls,hot girls,celebrities,celebrities videos,download videos,upload videos">
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="30 days">
 <meta name="distribution" content="global">
@@ -99,22 +100,19 @@ window.location=selectedtablink
 <table cellspacing="0" cellpadding="0" border="0" width="980" bgcolor="#ffffff">
 <tbody><tr>
     <td width="230" valign="bottom"><a href="index.php"><img src="images/logo/vwt.gif" width="230" height="70" alt="VideoWebTown - Home" border="0"></a></td>
+
     <td valign="bottom">
-	    <img src="images/spacer.gif" width="1" height="3" border="0"><br>
-		<script type="text/javascript">
-			<!--
-			google_ad_client = "pub-0164773041906984";
-			google_ad_width = 728;
-			google_ad_height = 90;
-			google_ad_format = "728x90_as";
-			google_ad_type = "text_image";
-			google_ad_channel ="";
-			//-->
-		</script>
-		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-	</td>
-</tr>
+<img src="images/spacer.gif" width="1" height="3" border="0"><br>
+<script type="text/javascript" language="JavaScript">
+var random = Math.round(Math.random() * 100000000);
+if (!pageNum) var pageNum = Math.round(Math.random() * 100000000);
+document.write('<SCR');
+document.write('IPT TYPE="text/javascript" LANGUAGE="JavaScript" SRC="http://media.snapemedia.com/hserver/acc_random=' + random +
+'/SITE=TULIX_VIDEOWEBTOWN_GENERAL/AAMSZ=728x90/pageid=' + pageNum + '">'); 
+document.write('</SCR');
+document.write('IPT>');
+</script><script type="text/javascript" language="JavaScript" src="http://media.snapemedia.com/hserver/acc_random=36675213/SITE=TULIX_VIDEOWEBTOWN_GENERAL/AAMSZ=728x90/pageid=94178612"></script>
+	</td></tr>
 <tr>
 	<td colspan="2" height="8"></td>
 </tr>
@@ -126,7 +124,7 @@ window.location=selectedtablink
 	<img src="images/spacer.gif" width="770" height="1" alt=""><br>
 	<table cellspacing="0" cellpadding="0" border="0" width="100%"> 
 <tbody><tr>
-    <td nowrap="">&nbsp;<font color="#555555"><b>Total <!--<b>23954 Users</b>,--> 17,020 Videos</b>&nbsp;&nbsp; <a href="websites.php">View Video Directory<img src="images/icons/v.gif" width="10" height="10" alt="" border="0" align="absmiddle" hspace="5"></a></font></td>
+    <td nowrap="">&nbsp;<font color="#555555"><b>Total <!--<b>39755 Users</b>,--> 41,917 Videos</b>&nbsp;&nbsp; <a href="websites.php">View Video Directory<img src="images/icons/v.gif" width="10" height="10" alt="" border="0" align="absmiddle" hspace="5"></a></font></td>
     <td nowrap="" align="center" width="65%"><font color="#555555"><b>W e l c o m e &nbsp; t o &nbsp; V  i d e o W e b T o w n</b> </font> &nbsp;</td>
 </tr>
 </tbody></table>    </td>
@@ -224,26 +222,25 @@ window.location=selectedtablink
 	<td><img src="images/boxes/corner.gif" width="190" height="15" alt=""></td>
 </tr>
 </tbody></table>	<center>
+
 <a href="http://www.abcw3b.com/" target="new"><img src="images/abc.gif" alt="Visit abcw3b.com" border="0"></a><br><br>
-<a href="http://www.webtownring.com/" target="new"><img src="http://www.webtownring.com/images/wtr_banner180.gif" alt="Visit WebTownRing" border="0"></a>
+
+
+
+<a href="http://www.webtownring.com/" target="new"><img src="http://www.webtownring.com/images/wtr_banner180.gif" border="0"></a>
+
+
 <br><br>
 <!--- Here   -->
-<script type="text/javascript">
-<!--
-google_ad_client = "pub-0164773041906984";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text_image";
-//2007-05-31: webtownring
-google_ad_channel = "4120037320";
-google_color_border = "eeeeee";
-google_color_bg = "eeeeee";
-google_color_link = "000000";
-google_color_text = "000000";
-google_color_url = "0033CC";
-//-->
-</script><script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+<script type="text/javascript" language="JavaScript">
+var random = Math.round(Math.random() * 100000000);
+if (!pageNum) var pageNum = Math.round(Math.random() * 100000000);
+document.write('<SCR');
+document.write('IPT TYPE="text/javascript" LANGUAGE="JavaScript" SRC="http://media.snapemedia.com/hserver/acc_random=' + random +
+'/SITE=TULIX_VIDEOWEBTOWN_GENERAL/AAMSZ=160x600/pageid=' + pageNum + '">'); 
+document.write('</SCR');
+document.write('IPT>');
+</script><script type="text/javascript" language="JavaScript" src="http://media.snapemedia.com/hserver/acc_random=90487807/SITE=TULIX_VIDEOWEBTOWN_GENERAL/AAMSZ=160x600/pageid=94178612"></script>
 	
 </center></td>
 </tr>
@@ -263,12 +260,18 @@ google_color_url = "0033CC";
 </td> 
 </tr>
 </tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+
 <script type="text/javascript">
-_uacct = "UA-701129-4";
-urchinTracker();
-</script></td>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-701129-4");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+
+</td>
 </tr>
 </tbody></table>
 </center>
