--- a/d/de/des/desire2learn.com.html
+++ b/d/de/des/desire2learn.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the desire2learn.com privacy policy that was archived on 2009-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090530211426id_/http%3A//desire2learn.com/contact/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the desire2learn.com privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003004951id_/http%3A//www.desire2learn.com/contact/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>Desire2Learn Website Privacy Policy</title>
-<meta name="description" content="Desire2Learn's LMS enterprise solutions for online learning. Web-based Learning Management System with a suite of course development, personalized instruction, collaboration, and education management tools.">
-<meta name="keywords" content="LMS, Learning Management System, Content Management System, eLearning, e-Learning, eportfolio, desire2learn, desire to learn, desire 2 learn, elearning, learning, e-learning solutions, elearning solutions, education, educational, content, delivery, content delivery, online learning, courses, online courses, Learning Repository, LiveRoom, learning objects">
+<meta name="description" content="Outlines our privacy practices with respect to collection, use, and disclosure of personal information and business information that you would reasonably expect to be kept confidential on this site.">
+<meta name="keywords" content="privacy, copyright, trademarks, use of site, software, downloading files, disclaimer, policy, security, LMS, Learning Management System, Content Management System, eLearning, e-Learning, eportfolio, desire2learn, desire to learn, desire 2 learn, elearning, learning, e-learning solutions, elearning solutions, education, educational, content, delivery, content delivery, online learning, courses, online courses, Learning Repository, LiveRoom, learning objects">
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <link href="/css/global_styles.css" rel="stylesheet" type="text/css">
 <link href="/css/nav.css" rel="stylesheet" type="text/css">
@@ -15,6 +15,7 @@
 <body><div id="container">
 <div id="topHeader">
 	<a href="/"><img src="/images/Desire2Learn_logo.gif" alt="Desire2Learn Innovative Learning Technology" width="212" height="58" border="0" align="right"></a>
+	<a target="_self" href="#main_content" id="skipNav" tabindex="-1">skip to main content</a>
 	<div class="contact">
 	<ul id="nav">
 	<li id="homeNav"><a href="/" class="topNav">Home</a></li>
@@ -33,6 +34,7 @@
 		<li><a href="/learningenvironment/">Learning Environment</a></li>
 		<li><a href="/eportfolio/">ePortfolio</a></li>
 		<li><a href="/competencies/">Competencies</a></li>
+		<li><a href="/analytics/">Analytics</a></li>
 		<li><a href="/learningrepository/">Learning Repository</a></li>
 		<li><a href="/liveroom/">LiveRoom</a></li>
 		<li><a href="/Essentials/">Desire2Learn Essentials</a></li>
@@ -65,7 +67,6 @@
 		<ul>
 		<li><a href="/careers/">Work at Desire2Learn</a></li>
 		<li><a href="/careers/jobs/">Available Positions</a></li>
-		<li><a href="/careers/events/">Careers Events</a></li>
 		<li><a href="/careers/faq/">FAQ</a></li>
 		<li class="ddLast"><a href="/co-op/">Co-op Opportunities</a></li>
 		</ul>
@@ -73,10 +74,10 @@
 	<li id="contactNav"><a href="/contact/" class="topNav">Contact</a>
 		<ul>
 		<li><a href="/contact/">Contact Information</a></li>
-		<li><a href="/media/">Media Library</a></li>
+		<li><a href="/resource/">Resource Library</a></li>
 		<li><a href="/demos/">Demo Library</a></li>
 		<li><a href="/contact/feedback/">Feedback Form</a></li>
-		<li><a href="/TheHorizon/" class="active"><em>The Horizon</em> Newsletter</a></li>
+		<li><a href="/TheHorizon/"><em>The Horizon</em> Newsletter</a></li>
 		<li class="ddLast"><a href="/refer/">Refer A Friend</a></li>
 		</ul>
 	</li>
@@ -84,7 +85,7 @@
 	</div>
 </div>
 
-<div id="headerImage"><img src="/images/headers/contact.jpg" alt="" width="923" height="120"></div>
+<div id="headerImage"><img src="/images/headers/contact.jpg" alt="" width="923" height="120"></div><a name="main_content" id="main content" tabindex="-1"></a>
 
 <div id="eLearning">
 <h1>Desire2Learn Website Privacy Policy</h1>
