--- a/g/go/gol/goldmic.com.html
+++ b/g/go/gol/goldmic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goldmic.com privacy policy that was archived on 2009-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090605231243id_/http%3A//goldmic.com/about/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goldmic.com privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003045746id_/http%3A//www.goldmic.com/about/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -221,8 +221,7 @@ pageTracker._trackPageview();
 
 	
 	<div style="padding-top:3px">
-		
-		<iframe id="adframe" src="http://www.goldmic.com/scripts/ad-leader.htm" frameborder="0" width="728" height="90" marginheight="0" marginwidth="0" scrolling="no"></iframe>
+		<iframe id="adframe" src="http://www.goldmic.com/scripts/ad-leader-bf.htm" frameborder="0" width="728" height="90" marginheight="0" marginwidth="0" scrolling="no"></iframe>
 	</div>
 	
 	
